# picotron-wgpu

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: basic_example.rs  inference_example.rs  training_example.rs
shaders/: attention.wgsl  layer_norm.wgsl  matmul.wgsl
src/: config.rs  lib.rs  model.rs  tokenizer.rs  training.rs  utils.rs
src/gpu/: device.rs  kernels.rs  memory.rs  mod.rs  operations.rs
src/parallelism/: context_parallel.rs  data_parallel.rs  mod.rs  pipeline_parallel.rs  tensor_parallel.rs
